--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -1,1 +1,26 @@
-/* здесь используйте глобальные переменные */
+// Colors
+
+@color-background-grey:  #E5E6E8;
+@color-background-lightest-grey:#F8F8F8;
+@color-background-lavender: #EAE6FC;
+@color-background-beige: #F3EBE1;
+@color-base-white: #FFFFFF;
+@color-base-grey: #BDBDBD;
+@color-main-text: #333333;
+@color-base-primary: #7859CF;
+@color-base-primary-lighter: #9070EC;
+@color-base-primary-darker: #593CAC;
+// @color-base-primary-opacity: rgba
+// (120, 89, 207, 0.25);
+@color-base-secondary: #F0EBFF;
+@color-light-grey: #E2E2E2;
+
+// Fonts
+
+@main-font: "Montserrat", "Arial", sans-serif;
+
+// Viewports
+
+@tablet-width: 768px;
+@desktop-width: 1440px;
+@mobile-width-only: 767px;
