--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -1,1 +1,17 @@
-/* здесь используйте глобальные селекторы img, body, html и так далее*/
+body {
+  margin: 0;
+}
+
+img {
+  object-fit: cover;
+}
+
+a {
+  text-decoration: none;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
