--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,19 @@
 @import "global/variables";
 @import "global/global";
 @import "global/fonts";
+@import "global/visually-hidden";
+@import "global/mixins";
 
 /* BLOCKS */
+@import "blocks/advantages";
+@import "blocks/button";
+@import "blocks/catalog";
+@import "blocks/container";
+@import "blocks/form";
 @import "blocks/header";
+@import "blocks/main";
+@import "blocks/navigation";
+@import "blocks/page";
+@import "blocks/slider";
+@import "blocks/slider-card";
+@import "blocks/text-addition";
