--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -10,8 +10,7 @@
 @color-base-primary: #7859CF;
 @color-base-primary-lighter: #9070EC;
 @color-base-primary-darker: #593CAC;
-// @color-base-primary-opacity: rgba
-// (120, 89, 207, 0.25);
+@color-base-primary-opacity: rgba(120, 89, 207, 0.25);
 @color-base-secondary: #F0EBFF;
 @color-light-grey: #E2E2E2;
 
