--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,14 +7,22 @@
 
 /* BLOCKS */
 @import "blocks/advantages";
+@import "blocks/add-info";
 @import "blocks/button";
 @import "blocks/catalog";
+@import "blocks/card";
+@import "blocks/cards-list";
 @import "blocks/container";
 @import "blocks/form";
+@import "blocks/goods-catalog";
 @import "blocks/header";
+@import "blocks/internet-contacts";
+@import "blocks/information";
 @import "blocks/main";
+@import "blocks/map";
 @import "blocks/navigation";
 @import "blocks/page";
+@import "blocks/pagination";
 @import "blocks/slider";
 @import "blocks/slider-card";
 @import "blocks/text-addition";
