--- a/source/less/blocks/text-addition.less
+++ b/source/less/blocks/text-addition.less
@@ -7,4 +7,10 @@
   color: @color-base-primary;
   display: block;
   padding-bottom: 4px;
+
+  &--slider {
+    @media (min-width: @desktop-width) {
+      text-align: left;
+    }
+  }
 }
