--- a/source/less/blocks/goods-catalog.less
+++ b/source/less/blocks/goods-catalog.less
@@ -5,3 +5,39 @@
 .goods-catalog__list {
   padding-bottom: 40px;
 }
+
+
+.goods-catalog__select-text {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  padding-right: 5px;
+}
+
+.goods-catalog__select-wrapper {
+  padding-bottom: 20px;
+}
+
+.goods-catalog__select {
+  border: none;
+  width: 165px;
+  height: 32px;
+  background-color: transparent;
+  color: @color-base-primary;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: right;
+  text-align: center;
+  padding: 1px;
+
+  &:hover,
+  &:focus {
+    background-color: @color-base-secondary;
+    border-radius: 4px;
+  }
+
+  &:focus-visible {
+    outline: none;
+  }
+}
