--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -6,21 +6,75 @@
   line-height: 16px;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    min-height: 80px;
+  }
 }
 
 .header__wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  max-height: 60px;
   border-bottom: 1px solid @color-base-secondary;
+
+  @media (min-width: @tablet-width) {
+    border: none;
+    justify-content: space-between;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 auto;
+    max-width: @desktop-width;
+  }
 }
 
 .header__logo {
   padding: 0 20px;
-  max-height: 60px;
+  min-height: 60px;
   display: flex;
   align-items: center;
+  margin-right: auto;
+
+  @media (min-width: @tablet-width) {
+    min-height: 80px;
+    margin-right: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    min-height: 80px;
+    margin-right: 0;
+    padding: 0 40px;
+    min-width: 396px;
+    justify-content: space-between;
+  }
+}
+
+.header__logo-img {
+  width: 32px;
+  height: 36px;
+
+  @media (min-width: @tablet-width) {
+    width: 82px;
+    height: 36px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 170px;
+    height: 36px;
+  }
+}
+
+.header__logo-text {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    display: block;
+    max-width: 126px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    text-transform: none;
+  }
 }
 
 .header__logo-link {
@@ -42,4 +96,108 @@
 
 .header__logo:active .header__logo-img {
   opacity: 0.6;
+}
+
+.header__user-navigation {
+  min-height: 60px;
+  min-width: 180px;
+  max-width: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding-right: 60px;
+
+  @media (min-width: @tablet-width) {
+    min-height: 80px;
+    order: 2;
+    padding-right: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+
+    padding-right: 40px;
+  }
+}
+
+.header__user-navigation-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.header__user-navigation-item {
+  width: 60px;
+  min-height: 60px;
+
+  @media (min-width: @tablet-width) {
+    width: 60px;
+    min-height: 80px;
+  }
+
+  @media (min-width: @desktop-width) {
+    &--user {
+      width: 112px;
+    }
+
+    &--basket {
+      width: 129px;
+    }
+
+  }
+}
+
+.header__user-navigation-link {
+  margin: 0;
+  padding: 10px;
+  min-width: 100%;
+  height: 100%;
+  color: @color-main-text;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &:active {
+    background-color: @color-base-secondary;
+    opacity: 1;
+  }
+}
+
+.header__user-navigation-icon {
+  color: @color-main-text;
+}
+
+.header__user-navigation-link:hover .header__user-navigation-icon,
+.header__user-navigation-link:focus .header__user-navigation-icon {
+  color: @color-base-primary;
+}
+
+.header__user-navigation-link:active .header__user-navigation-icon {
+  color: @color-main-text;
+}
+
+@media (min-width: @desktop-width) {
+
+  .header__user-navigation-link:hover .header__user-navigation-text,
+  .header__user-navigation-link:focus .header__user-navigation-text,
+  .header__user-navigation-link:active .header__user-navigation-text {
+    color: @color-base-primary;
+  }
+
+  .header__user-navigation-link:active .header__user-navigation-icon {
+    color: @color-base-primary;
+  }
+}
+
+.header__user-navigation-text {
+  display: none;
+
+  @media (min-width: @desktop-width) {
+    display: inline-block;
+    padding-left: 8px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
