Завершает адаптивную верстку сайта

--- a/source/less/blocks/add-info.less
+++ b/source/less/blocks/add-info.less
@@ -28,6 +28,14 @@
     line-height: 20px;
     text-transform: none;
     padding-left: 19px;
+
+    @media (min-width: @tablet-width) {
+      padding-right: 30px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding-right: 0;
+    }
   }
 }
 
