--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -24,6 +24,7 @@
 
   @media (min-width: @desktop-width) {
     height: 100%;
+    z-index: 2;
   }
 
   &--before {
@@ -77,6 +78,7 @@
     }
     @media (min-width: @desktop-width) {
       top: 347px;
+      z-index: 2;
     }
   }
 
@@ -91,6 +93,7 @@
     }
     @media (min-width: @desktop-width) {
       top: 347px;
+      z-index: 2;
     }
   }
 }
