--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -29,20 +29,39 @@
   }
 
   &--submit {
-    width: 160px;
+    padding: 10px 14px;
     min-height: 45px;
     font-size: 13px;
     line-height: 24px;
     margin-bottom: 24px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 0;
+      margin-right: 30px;
+      padding: 8px 3px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-right: 18px;
+      padding: 8px 4px;
+    }
   }
 
   &--reset {
-    width: 160px;
+    padding: 10px 16px;
     min-height: 45px;
     background-color: @color-base-white;
     color: @color-base-primary;
-    font-size: 14px;
+    font-size: 13px;
     line-height: 24px;
+
+    @media (min-width: @tablet-width) {
+      padding: 8px 5px;
+    }
+
+    @media (min-width: @desktop-width) {
+      padding: 8px 11px;
+    }
 
     &:hover,
     &:focus {
