--- a/source/less/blocks/cards-list.less
+++ b/source/less/blocks/cards-list.less
@@ -3,7 +3,15 @@
   padding: 0;
   list-style-type: none;
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: repeat(1, minmax(280px, auto));
   gap: 20px;
 
+  @media (min-width: @tablet-width) {
+    grid-template-columns: repeat(2, minmax(349px, auto));
+    gap: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: repeat(3, 317px);
+  }
 }
