--- a/source/less/blocks/goods-catalog.less
+++ b/source/less/blocks/goods-catalog.less
@@ -1,9 +1,25 @@
 .goods-catalog {
   padding-bottom: 44px;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 90px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 120px;
+  }
 }
 
 .goods-catalog__list {
-  padding-bottom: 40px;
+  margin-bottom: 40px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 70px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 60px;
+  }
 }
 
 
@@ -15,7 +31,15 @@
 }
 
 .goods-catalog__select-wrapper {
-  padding-bottom: 20px;
+  margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: end;
+  }
 }
 
 .goods-catalog__select {
