--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -1,42 +1,53 @@
+.information {
+  @media (min-width: @desktop-width) {
+    width: 998px;
+  }
+}
+
 .information__list {
   margin: 0;
   padding: 0;
   padding-top: 20px;
   padding-bottom: 28px;
   list-style-type: none;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+
+.information__container {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 38px;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 0;
+    width: 100%;
+  }
+}
+
+.information__container-padding {
+  min-width: 320px;
+  padding: 0 20px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    min-width: auto;
+    width: 100%;
+  }
 }
 
 .information__wrapper {
   border-bottom: 1px solid @color-base-secondary;
-}
 
-.information__copyright {
-  padding-top: 20px;
-  padding-bottom: 30px;
-}
-
-.information__copyright-text {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 16px;
-  color: @color-base-grey;
-  padding-right: 3px;
-}
-
-.information__copyright-wrapper {
-  display: flex;
-  justify-content: center;
-}
-
-.information__copyright-icon {
-  color: @color-base-grey;
-}
-
-.information__copyright-link:hover .information__copyright-icon,
-.information__copyright-link:focus .information__copyright-icon {
-  color: @color-base-primary;
-}
-
-.information__copyright-link:active .information__copyright-icon {
-  color: @color-base-primary-darker;
+  @media (min-width: @tablet-width) {
+    border: none;
+    width: 33.3%;
+  }
 }
