--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,6 +14,7 @@
 @import "blocks/cards-list";
 @import "blocks/container";
 @import "blocks/form";
+@import "blocks/footer";
 @import "blocks/goods-catalog";
 @import "blocks/header";
 @import "blocks/internet-contacts";
